=== HEAD

* Fix Dataset#from_self! to no longer create a self-referential dataset (jeremyevans)

* Use SQLSTATE or database error codes if available instead of regexp parsing for more specific DatabaseErrors (jeremyevans)

* Add unlimited_update plugin to work around MySQL warning in replicated environments (jeremyevans)

* Add the :retry_on and :num_retries transaction options for automatically retrying transactions (jeremyevans)

* Raise serialization failures/deadlocks as Sequel::SerializationFailure exceptions (jeremyevans)

* Support transaction isolation levels on Oracle and DB2 (jeremyevans)

* Support transaction isolation levels when using the JDBC transaction support (jeremyevans)

=== 3.44.0 (2013-02-04)

* Speedup mysql2 adapter with identifier output method fetch speed by up to 50% (jeremyevans)

* Speedup tinytds adapter fetch speed by up to 60% (jeremyevans)

* Expand columns_introspection extension to consider cached schema values in the database (jeremyevans)

* Expand columns_introspection extension to handle subselects (jeremyevans)

* Have #last and #paged_each for model datasets order by the model's primary key by default (jeremyevans)

* Improve emulated offset support to handle subqueries (jeremyevans)

* Remove use of Object#extend from the eager_each plugin (jeremyevans)

* Add support for temporary views on SQLite and PostgreSQL via the :temp option to create_view (chanks, jeremyevans)

* Emulate Database#create_or_replace_view if not supported directly (jeremyevans)

* Add Dataset#paged_each, for processing entire datasets without keeping all rows in memory (jeremyevans)

* Add Sequel::ConstraintViolation exception class and subclasses for easier exception handling (jeremyevans)

* Fix use of identity_map plugin with many_to_many associations with right composite keys (chanks) (#603)

* Increase virtual row performance by using a shared VirtualRow instance (jeremyevans)
